<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999">

        <TextView
            android:id="@+id/timerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:background="#FFFFFF"
            android:backgroundTint="#FF5722"
            android:gravity="center"
            android:text="@string/_30s"
            android:textAlignment="center"
            android:textSize="35sp"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/mathsTV"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_31_7"
            android:textAlignment="center"
            android:textSize="30sp"
            app:autoSizeTextType="none" />

        <TextView
            android:id="@+id/scoreTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".3"
            android:background="#FFFFFF"
            android:backgroundTint="#03A9F4"
            android:gravity="center"
            android:text="@string/_0_0"
            android:textAlignment="center"
            android:textSize="35sp"
            app:autoSizeTextType="none" />
    </LinearLayout>

    <Button
        android:id="@+id/startB"
        android:layout_width="149dp"
        android:layout_height="124dp"
        android:backgroundTint="#51E020"
        android:onClick="goClick"
        android:text="@string/go"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546"
        tools:visibility="invisible" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="405dp"
        android:layout_height="302dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        app:layout_constraintVertical_bias="0.01999998"
        app:rowCount="2">

        <Button
            android:id="@+id/ansB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#2147F3"
            android:onClick="check"
            android:text="@string/_38"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ansB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#F20909"
            android:includeFontPadding="false"
            android:onClick="check"
            android:text="@string/_100"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ansB3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#4CAF50"
            android:onClick="check"
            android:text="@string/_36"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ansB4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFEB3B"
            android:onClick="check"
            android:text="@string/_37"
            android:textAlignment="center"
            android:textSize="45sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/correct"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.381" />

    <Button
        android:id="@+id/playAgainB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="86dp"
        android:onClick="playAgain"
        android:text="Play Again"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>